# professyans

./: .cursorignore  .cursorindexingignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  perekrestok_spec_v2.md  professyans_spec_v2.md
.cursor/rules/: 00-global.mdc  10-architecture.mdc  20-data-contract.mdc  30-parity.mdc
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  methods.py  sessions.py
backend/app/db/: __init__.py  models.py
backend/app/schemas/: __init__.py
backend/tests/: test_api.py
core/: pyproject.toml
core/src/professyans_core/: __init__.py  models.py  paths.py
core/src/professyans_core/methods/: __init__.py  common.py  formula5.py  formula7.py
core/tests/: conftest.py  test_formula5.py  test_formula7.py
docs/: 00_INDEX.md  01_ARCHITECTURE.md  02_DATA_CONTRACT.md  03_CONVENTIONS.md  04_CURSOR_PLAYBOOK.md  05_ROADMAP_TASKS.md  06_SPEC_MAP.md  07_GIT_WORKFLOW.md  99_TECH_DEBT.md  f5_vs_f7_comparison.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  main.tsx
frontend/src/components/cards/: RankCard.tsx
frontend/src/components/common/: FormulaTray.tsx  LegendChip.tsx  TrackOption.tsx
frontend/src/components/layout/: Shell.tsx
frontend/src/components/results/: CardsBadgeList.tsx  HintsList.tsx  InsightBlock.tsx  MoleculeMap.tsx
frontend/src/components/ui/: Button.tsx  ProgressBar.tsx
frontend/src/data/formula5/: cards.ts  hints.ts
frontend/src/data/formula7/: cards.ts  hints.ts  provocations.ts
frontend/src/lib/: api.ts  storage.ts  tracker.ts
frontend/src/lib/__tests__/: tracker.test.ts
frontend/src/lib/common/: hints.ts  (+3 more)
frontend/src/screens/: HistoryScreen.tsx  HomeScreen.tsx
frontend/src/store/: sessionStore.ts
frontend/src/styles/: index.css
frontend/src/types/: card.ts  session.ts
shared-data/formula5/: cards.json  hints.json
shared-data/formula7/: cards.json  hints.json  provocations.json
(+18 files in other folders)
